conformance/tests/httproute-invalid-parentref-not-distinct.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: httproute-parentrefs-indistinct-matching-sectionname
  namespace: gateway-conformance-infra
spec:
  parentRefs:
  - name: same-namespace
    namespace: gateway-conformance-infra
    sectionName: http1
  - name: same-namespace
    namespace: gateway-conformance-infra
    sectionName: http1
  rules:
  - backendRefs:
    - name: infra-backend-v1
      kind: Service
      port: 8080
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: httproute-parentrefs-identical
  namespace: gateway-conformance-infra
spec:
  parentRefs:
  - name: same-namespace
    namespace: gateway-conformance-infra
  - name: same-namespace
    namespace: gateway-conformance-infra
  rules:
  - backendRefs:
    - name: infra-backend-v1
      kind: Service
      port: 8080
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: httproute-parentrefs-one-sectionname
  namespace: gateway-conformance-infra
spec:
  # This parentRefs section has two entries that are both individually valid
  # but invalid when combined.
  parentRefs:
  - name: same-namespace
    namespace: gateway-conformance-infra
  - name: same-namespace
    namespace: gateway-conformance-infra
    sectionName: http
  rules:
  - backendRefs:
    - name: infra-backend-v1
      kind: Service
      port: 8080
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: httproute-parentrefs-one-port
  namespace: gateway-conformance-infra
spec:
  # This parentRefs section has two entries that are both individually valid
  # but invalid when combined.
  parentRefs:
  - name: same-namespace
    namespace: gateway-conformance-infra
  - name: same-namespace
    namespace: gateway-conformance-infra
    port: 80
  rules:
  - backendRefs:
    - name: infra-backend-v1
      kind: Service
      port: 8080
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: httproute-parentrefs-one-port-and-sectionname
  namespace: gateway-conformance-infra
spec:
  # This parentRefs section has two entries that are both individually valid
  # but invalid when combined.
  parentRefs:
  - name: same-namespace
    namespace: gateway-conformance-infra
  - name: same-namespace
    namespace: gateway-conformance-infra
    port: 80
    sectionName: http
  rules:
  - backendRefs:
    - name: infra-backend-v1
      kind: Service
      port: 8080
